force-app/main/default/objects/RT_ImportLog__c/RT_ImportLog__c.object-meta.xml
<CustomObject>
    <label>Import Log</label>
    <nameField>
        <displayFormat>ILN-{0000}</displayFormat>
        <label>Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>