force-app/main/default/objects/RT_ImportLog__c/fields/Email_Ready__c.field-meta.xml
<CustomField>
    <fullName>Email_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the data upload via import wizard was done after splitting the upload file, and email can be triggered.</description>
    <label>Email Ready?</label>
    <type>Checkbox</type>
</CustomField>