force-app/main/default/objects/RT_ImportLog__c/fields/ImportType__c.field-meta.xml
<CustomField>
    <fullName>ImportType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Import Type</label>
    <referenceTo>RT_ImportType__c</referenceTo>
    <relationshipLabel>Import Logs</relationshipLabel>
    <relationshipName>Import_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>