force-app/main/default/objects/RT_ImportLog__c/fields/Is_Split_upload__c.field-meta.xml
<CustomField>
    <fullName>Is_Split_upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to indicate if the file was loaded after splitting internally.</description>
    <label>Is Split upload?</label>
    <type>Checkbox</type>
</CustomField>