force-app/main/default/objects/RT_ImportLog__c/fields/Rv_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Rv_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled?</label>
    <type>Checkbox</type>
</CustomField>