force-app/main/default/objects/RT_ImportLog__c/fields/TotalRecords__c.field-meta.xml
<CustomField>
    <fullName>TotalRecords__c</fullName>
    <label>Total Number of Records (With Header)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>