force-app/main/default/objects/RT_ImportLog__c/listViews/My_Team_s_Uploads.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Uploads</fullName>
    <columns>NAME</columns>
    <columns>ImportType__c</columns>
    <columns>ImportStatus__c</columns>
    <columns>SuccessCount__c</columns>
    <columns>ErrorCount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>My Team&apos;s Uploads</label>
</ListView>